--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "twee3LanguageTools.storyformat.current": "sugarcube-2",
-    "editor.wordWrap": "on"
+    "editor.wordWrap": "on",
+    "twee3LanguageTools.passage.list": true
 }
